# libvmod-esicookies

./: .gitignore  COPYING  Makefile.am  README.rst  configure.ac
src/: Makefile.am  vmod_esicookies.c  vmod_esicookies.h  vmod_esicookies.vcc
src/tests/: vmod_esicookies.vtc  vmod_esicookies_corners.vtc  vmod_esicookies_reload.vcl  vmod_esicookies_reload.vtc
